--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,13 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('./LexendDeca-VariableFont_wght.ttf');
+}
+
 body {
     margin: 0;
     padding: 0;
     color: white;
-    font-family: sans-serif;
+    font-family: 'MyFont';
     height: 100%;
     min-height: 100vh;
     display: grid;
