--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
     grid-area: nav;
 } 
 
-ul {
+.nav > ul {
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -51,9 +51,23 @@ ul {
     width: 250px;
     height: 250px;
     box-sizing: border-box;
-    padding: 5px;
+    padding: 10px;
 }
 
-h3 {
+.card h3 {
+    margin: 0;
+}
+
+.card ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.card li {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card p {
     margin: 0;
 }
