--- a/src/style.css
+++ b/src/style.css
@@ -86,17 +86,59 @@ form {
     background-color: #2a9d8f;
     padding: 20px;
     width: 50%;
+    height: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
+form div {
+    display: flex;
+    flex-direction: column;
+}
+
 form ul {
     list-style: none;
-    padding-left: 0;
+    padding-left: 20px;
+    margin: 0;
+}
+
+form li {
+    margin-bottom: 10px;
+}
+
+label[for="newTitle"],
+label[for="desc"],
+label[for="date"],
+label[for="select-option"] {
+    margin-right: 8px;
+}
+
+#low-priority {
+    margin-left: 8px;
+}
+
+label[for="project"] {
+    margin-bottom: 5px;
 }
 
 form h3 {
     margin-top: 0;
     text-align: center;
     font-size: 1.6rem;
+}
+
+button {
+   border: none;
+   text-decoration: none; 
+   background-color: #264653;
+   color: white;
+   padding: 5px 10px;
+   align-self: center;
+   margin-top: 15px;
+}
+
+button:hover {
+    cursor: pointer;
+    color: #264653;
+    background-color: white;
 }
