--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,6 @@ body {
 /*MAIN PROJECTS DISPLAY*/
 
 .project-container {
-    /*background-color: #e9c46a;*/
     grid-area: project-container;
     padding: 20px;
     display: flex;
@@ -62,9 +61,11 @@ body {
 .card {
     background-color: #2a9d8f;
     width: 250px;
-    min-height: 250px;
+    height: 250px;
     box-sizing: border-box;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .card h3 {
@@ -90,6 +91,11 @@ body {
 
 .card p {
     margin: 0;
+}
+
+.card button {
+    margin-bottom: 10px;
+    margin-top: auto;
 }
 
 /*FORMS*/
