--- a/src/style.css
+++ b/src/style.css
@@ -62,11 +62,13 @@ body {
 
 .card {
     background-color: #2a9d8f;
-    width: 250px;
+    min-width: 250px;
+    max-width: 350px;
     box-sizing: border-box;
     padding: 10px;
     display: flex;
     flex-direction: column;
+    flex: 1 1 10%;
 }
 
 .card h3 {
